unpackaged/main/default/objects/Price_Book_Listing__c/Price_Book_Listing__c.object-meta.xml
<CustomObject>
    <description>This is a custom object that mirrors the Price Book Entry object. It exists and is in use, because there is a requirement to link Price Book Entries to the 'Related Product' object, but at time of configuration this is not an option for a lookup. 

This solution offers the ability for the Related Products added to a Regime, Prescription or Order record to be validated against the patient's diagnosis (a field on the Contact object). The Price Books represent different diagnoses and the Products added to it are appropriate for the treatment of their condition.</description>
    <label>Price Book Listing</label>
    <nameField>
        <label>Price Book Listing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Book Listings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>