unpackaged/main/default/objects/Price_Book_Listing__c/fields/Price_Book_Name__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Name__c</fullName>
    <description>Stores the text value for the Price Book Name so it can be searched</description>
    <externalId>true</externalId>
    <label>Price Book Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>