unpackaged/main/default/objects/Price_Book_Listing__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Price Book Listings</relationshipLabel>
    <relationshipName>Price_Book_Listings</relationshipName>
    <type>Lookup</type>
</CustomField>