unpackaged/main/default/objects/Price_Book_Listing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Product__c</columns>
    <columns>NAME</columns>
    <columns>Price_Book__c</columns>
    <columns>Product_Code__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>